<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.ayrus</groupId>
  <artifactId>testng-playwright</artifactId>
  <version>1.0-SNAPSHOT</version>

  <properties>
    <maven.compiler.source>21</maven.compiler.source>
    <maven.compiler.target>21</maven.compiler.target>
    <maven.compiler.encoding>UTF-8</maven.compiler.encoding>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <allure.version>2.27.0</allure.version>
    <maven.compiler-plugin.version>3.13.0</maven.compiler-plugin.version>
    <allure.results.directory>target/allure-results</allure.results.directory>
    <maven.surefire-plugin.version>3.5.2</maven.surefire-plugin.version>
    <suiteXmlFilePath>src/test/resources/suites</suiteXmlFilePath>
    <suiteXmlFile>testng_sample.xml</suiteXmlFile>
    <aspectj.version>1.9.9.1</aspectj.version>
  </properties>

  <dependencies>
    <!-- https://mvnrepository.com/artifact/com.microsoft.playwright/playwright -->
    <dependency>
      <groupId>com.microsoft.playwright</groupId>
      <artifactId>playwright</artifactId>
      <version>1.50.0</version>
    </dependency>

    <!-- https://mvnrepository.com/artifact/org.testng/testng -->
    <dependency>
      <groupId>org.testng</groupId>
      <artifactId>testng</artifactId>
      <version>7.11.0</version>
    </dependency>

    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
      <version>1.18.34</version>
      <scope>provided</scope>
    </dependency>

    <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
      <version>2.0.16</version>
    </dependency>

    <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-simple -->
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-simple</artifactId>
      <version>2.0.16</version>
      <scope>test</scope>
    </dependency>

    <!-- https://mvnrepository.com/artifact/net.javacrumbs.json-unit/json-unit-assertj -->
    <dependency>
      <groupId>net.javacrumbs.json-unit</groupId>
      <artifactId>json-unit-assertj</artifactId>
      <version>4.1.0</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>io.qameta.allure</groupId>
      <artifactId>allure-testng</artifactId>
      <version>${allure.version}</version>
      <exclusions>
        <exclusion>
          <groupId>org.testng</groupId>
          <artifactId>testng</artifactId>
        </exclusion>
      </exclusions>
    </dependency>

  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-clean-plugin</artifactId>
        <version>3.4.0</version>
        <configuration>
          <filesets>
            <fileset>
              <directory>allure-results</directory>
            </fileset>
          </filesets>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-checkstyle-plugin</artifactId>
        <version>3.6.0</version>
        <configuration>
          <configLocation>lib/google_checks.xml</configLocation>
          <consoleOutput>true</consoleOutput>
          <outputFileFormat>plain</outputFileFormat>
          <failsOnError>true</failsOnError>
          <linkXRef>false</linkXRef>
          <includeTestSourceDirectory>true</includeTestSourceDirectory>
          <suppressionsLocation>lib/suppressions.xml</suppressionsLocation>
        </configuration>
        <executions>
          <execution>
            <id>validate</id>
            <phase>validate</phase>
            <goals>
              <goal>check</goal>
            </goals>
          </execution>
        </executions>
        <dependencies>
          <dependency>
            <groupId>com.puppycrawl.tools</groupId>
            <artifactId>checkstyle</artifactId>
            <version>10.18.2</version>
          </dependency>
        </dependencies>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>${maven.compiler-plugin.version}</version>
        <configuration>
          <source>${maven.compiler.source}</source>
          <target>${maven.compiler.target}</target>
          <encoding>${maven.compiler.encoding}</encoding>
          <showWarnings>true</showWarnings>
          <showDeprecation>true</showDeprecation>
          <fork>true</fork>
          <compilerArgs>
            <arg>--enable-preview</arg>
          </compilerArgs>
          <annotationProcessorPaths>
            <path>
              <groupId>org.projectlombok</groupId>
              <artifactId>lombok</artifactId>
              <version>1.18.34</version>
            </path>
          </annotationProcessorPaths>
          <compilerArgs>--enable-preview</compilerArgs>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-resources-plugin</artifactId>
        <version>3.3.0</version>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>${maven.surefire-plugin.version}</version>
        <configuration>
          <systemPropertyVariables>
            <allure.results.directory>${allure.results.directory}</allure.results.directory>
          </systemPropertyVariables>
          <encoding>${project.build.sourceEncoding}</encoding>
          <suiteXmlFiles>
            <suiteXmlFile>${suiteXmlFilePath}/${suiteXmlFile}</suiteXmlFile>
          </suiteXmlFiles>
          <properties>
            <property>
              <name>reporter</name>
              <value>
                org.testng.reporters.XMLReporter:generateTestResultAttributes=true,generateGroupsAttribute=true
              </value>
            </property>
          </properties>
          <argLine>
            --enable-preview
            -javaagent:${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar
          </argLine>
        </configuration>
        <dependencies>
          <dependency>
            <groupId>org.aspectj</groupId>
            <artifactId>aspectjweaver</artifactId>
            <version>${aspectj.version}</version>
          </dependency>
          <dependency>
            <groupId>org.apache.maven.surefire</groupId>
            <artifactId>surefire-testng</artifactId>
            <version>${maven.surefire-plugin.version}</version>
          </dependency>
        </dependencies>
      </plugin>
      <plugin>
        <groupId>com.spotify.fmt</groupId>
        <artifactId>fmt-maven-plugin</artifactId>
        <version>2.24</version>
        <configuration>
          <verbose>true</verbose>
          <style>google</style>
          <displayFiles>true</displayFiles>
        </configuration>
        <executions>
          <execution>
            <goals>
              <goal>format</goal>
              <goal>check</goal>
            </goals>
          </execution>
        </executions>
        <!-- https://mvnrepository.com/artifact/com.google.googlejavaformat/google-java-format -->
        <dependencies>
          <dependency>
            <groupId>com.google.googlejavaformat</groupId>
            <artifactId>google-java-format</artifactId>
            <version>1.23.0</version>
          </dependency>
        </dependencies>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>build-helper-maven-plugin</artifactId>
        <version>3.4.0</version>
        <executions>
          <execution>
            <id>add-source</id>
            <phase>generate-test-sources</phase>
            <goals>
              <goal>add-test-source</goal>
            </goals>
            <configuration>
              <sources>
                <!-- This is where the generated java classes are to be found which
                this plugin will compile and add back to the classpath.
                The value specified here has to match the value of "outputDirectory" parameter of our code generator plugin entry.
                -->
                <source>${project.build.directory}/generated-sources</source>
              </sources>
            </configuration>
          </execution>
          <execution>
            <id>parse-suiteXmlFiles</id>
            <phase>validate</phase>
            <goals>
              <goal>regex-property</goal>
            </goals>
            <configuration>
              <name>parsedSuiteXmlFiles</name>
              <value>${suiteXmlFile}</value>
              <regex>[^,]+</regex>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>

  <!--<build>
    <plugins>
      &lt;!&ndash; Maven Surefire Plugin for running TestNG tests &ndash;&gt;
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.5.2</version>
        <configuration>
          <systemPropertyVariables>
            <allure.results.directory>${allure.results.directory}</allure.results.directory>
          </systemPropertyVariables>
        </configuration>
      </plugin>

      &lt;!&ndash; Allure Maven Plugin &ndash;&gt;
      <plugin>
        <groupId>io.qameta.allure</groupId>
        <artifactId>allure-maven</artifactId>
        <version>2.15.2</version>
      </plugin>
    </plugins>
  </build>-->

</project>